# trading-agent-v2

./: .env.example  .gitignore  ARCHITECTURE_V2.md  COMPARISON_PROTOCOL.md  DEPLOY.md  FITNESS_FUNCTION.md  GITHUB.md  MEMORY.md  Procurement_Report.md  README.md  progress_tracker.json  pyproject.toml  setup_github.sh
.github/workflows/: tests.yml
deploy/: README_DEPLOY.md  angela-trade-fund-v2.service  angela-ui-v2.service  install_v2_on_hetzner.bat  install_v2_on_hetzner.sh
memory_v2/: README.md  __init__.py  migration_from_v1.py  schema.py
paper_trade/: __init__.py  compare_report.py  dashboard_v2.py  shadow_alpaca.py  side_by_side_runner.py
shared/: __init__.py  alpaca_paper.py  comparison_ledger.py  dual_ledger_notes.md  ledger_schema.py
tests/: test_dare_gate.py  test_dual_ledger.py  test_evolution.py  test_fitness_mirrors_v1.py  test_intraday_tick.py  test_side_by_side_smoke.py
v2_engine/: __init__.py  config.py  orchestrator.py
v2_engine/agents/: __init__.py  base.py  eda.py  extractor.py  generator.py  langgraph_dag.py  persona.py  planner.py  qa.py  quant.py  synthesizer.py
v2_engine/distillation/: __init__.py  cot_distill.py
v2_engine/evolution/: __init__.py  fitness.py  lineage.py  merge_dare.py  merge_slerp.py  merge_structural.py  mutate.py  population.py  tournament.py
v2_engine/intraday/: __init__.py  context_filter.py  divergence.py  news_watch.py  trailing_stop.py
v2_engine/lora/: __init__.py  adapter_swap.py
v2_engine/retrieval/: __init__.py  dare_gate.py  lexical_index.py  pi_serini.py  self_correction.py  vector_store.py
